# navbe_ai_orchestrator_backend

./: .gitignore  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: AGENTS.md  Dockerfile  config.py  engine.py  main.py  mcp_entry.py  mcp_server.py  models.py  pyproject.toml
backend/connectors/: __init__.py  resend_connector.py
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/routers/: executions.py  notifications.py  processes.py  schedules.py
backend/src/core/: config.py
backend/src/domains/executions/: models.py  services.py
backend/src/domains/processes/: models.py  services.py
backend/src/infrastructure/: database.py  scheduler.py
backend/src/infrastructure/connectors/: mcp.py  resend.py
frontend/: AGENTS.md  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/domains/executions/: types.ts
frontend/src/domains/executions/components/: execution-history-table.tsx  execution-viewer.tsx
frontend/src/domains/executions/hooks/: use-executions.ts
frontend/src/domains/executions/services/: execution-service.ts
frontend/src/domains/processes/: types.ts
frontend/src/domains/processes/components/: execution-status-circles.tsx  process-card.tsx  process-details.tsx  process-form-modal.tsx  process-list.tsx
frontend/src/domains/processes/hooks/: use-processes.ts
frontend/src/domains/schedules/hooks/: use-schedules.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/shared/lib/: api-client.ts
frontend/src/shared/utils/: cn.ts
(+4 files in other folders)
