[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.13.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "pydantic-settings>=2.13.1",
    "resend>=2.27.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.42.0",
]
