[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.13.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "pydantic-settings>=2.13.1",
    "resend>=2.27.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
